--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "gptserver",
   "version": "1.0.0",
-  "description": "",
+  "description": "GPT webhook server for Dialogflow",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["gpt", "dialogflow", "webhook"],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "express": "^5.1.0"
   }
 }
